# serializer version: 1
# name: test_agent_graph_with_mixed_tools
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	__agent_finish__(<p>__agent_finish__</p>)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model;
  	model -.-> __agent_finish__;
  	model -.-> tools;
  	tools -.-> __agent_finish__;
  	tools -.-> model;
  	__agent_finish__ --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_agent_graph_with_return_direct_tool
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	__agent_finish__(<p>__agent_finish__</p>)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model;
  	model -.-> __agent_finish__;
  	model -.-> tools;
  	tools -.-> __agent_finish__;
  	tools -.-> model;
  	__agent_finish__ --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_agent_graph_without_return_direct_tools
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model(model)
  	tools(tools)
  	__agent_finish__(<p>__agent_finish__</p>)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model;
  	model -.-> __agent_finish__;
  	model -.-> tools;
  	tools -.-> model;
  	__agent_finish__ --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
